--- a/starbuzz.css
+++ b/starbuzz.css
@@ -4,6 +4,14 @@ body {
   font-size:        small;
   margin:           0px;
 }
+#allcontent{
+  padding-top: 5px;
+  padding-bottom: 5px;
+  width: 800px;
+  background-color: #675c47;
+  margin-left: auto;
+  margin-right: auto;
+}
 
 #header {
   background-color: #675c47;
@@ -15,16 +23,16 @@ body {
   background:       #efe5d0 url(images/background.gif) top left;
   font-size:        105%;
   padding:          15px;
-  margin:           0px 330px 10px 10px;
+  margin:           0px 10px 10px 10px;
+  width:            420px;
+  float:            left;
 }
 
 #sidebar {
   background:       #efe5d0 url(images/background.gif) bottom right;
   font-size:        105%;
   padding:          15px;
-  margin:           0px 10px 10px 10px;
-  width: 280px;
-  float: right;
+  margin:           0px 10px 10px 470px;
 
 }
 
@@ -35,7 +43,7 @@ body {
   padding:          15px;
   margin:           10px;
   font-size:        90%;
-    clear: right;
+  clear:            left;
 }
 
 h1 {
