--- a/starbuzz.css
+++ b/starbuzz.css
@@ -8,21 +8,31 @@ body {
 #header {
   background-color: #675c47;
   margin:           10px;
+  margin-bottom: 0px;
   height:           108px;
+}
+div#table{
+  display: table;
+  border-spacing: 10px;
+}
+div#row{
+  display: table-row;
 }
 
 #main {
+  display: table-cell;
   background:       #efe5d0 url(images/background.gif) top left;
   font-size:        105%;
   padding:          15px;
-  margin:           0px 10px 10px 10px;
+    vertical-align: top;
 }
 
 #sidebar {
+  display: table-cell;
   background:       #efe5d0 url(images/background.gif) bottom right;
   font-size:        105%;
   padding:          15px;
-  margin:           0px 10px 10px 10px;
+  vertical-align: top;
 }
 
 #footer {
@@ -31,6 +41,7 @@ body {
   text-align:       center;
   padding:          15px;
   margin:           10px;
+  margin-top: 0px;
   font-size:        90%;
 }
 
