--- a/starbuzz.css
+++ b/starbuzz.css
@@ -4,37 +4,61 @@ body {
   font-size:        small;
   margin:           0px;
 }
-#allcontent{
-  padding-top: 5px;
-  padding-bottom: 5px;
-  width: 800px;
-  background-color: #675c47;
-  margin-left: auto;
-  margin-right: auto;
-}
 
 #header {
-  background-color: #675c47;
+   background-color: #675c47;
   margin:           10px;
+  margin-bottom: 0px;
   height:           108px;
+}
+#headerSlogan{
+  float: right;
+}
+#award{
+  position: absolute;
+  top: 30px;
+  left: 365px;
+}
+div#table{
+  display: table;
+  border-spacing: 10px;
+}
+div#row{
+  display: table-row;
+}
+#drinks {    
+  display: table-cell;    
+  background-color: #efe5d0;    
+  width: 20%;   
+  padding: 15px;    
+  vertical-align: top; 
 }
 
 #main {
+  display: table-cell;
   background:       #efe5d0 url(images/background.gif) top left;
   font-size:        105%;
   padding:          15px;
-  margin:           0px 10px 10px 10px;
-  width:            420px;
-  float:            left;
+    vertical-align: top;
 }
 
 #sidebar {
+  display: table-cell;
   background:       #efe5d0 url(images/background.gif) bottom right;
   font-size:        105%;
   padding:          15px;
-  margin:           0px 10px 10px 470px;
-
+  vertical-align: top;
+  width: 30%;
 }
+#coupon {  
+  position: relative;    
+  top: 40px;    
+  left: -90px; 
+}
+#coupon a, img {   
+ border: none; 
+}
+
 
 #footer {
   background-color: #675c47;
@@ -42,8 +66,8 @@ body {
   text-align:       center;
   padding:          15px;
   margin:           10px;
+  margin-top: 0px;
   font-size:        90%;
-  clear:            left;
 }
 
 h1 {
