proper HTML5 tags used

--- a/starbuzz.css
+++ b/starbuzz.css
@@ -5,7 +5,7 @@ body {
   margin:           0px;
 }
 
-#header {
+header {
    background-color: #675c47;
   margin:           10px;
   margin-bottom: 0px;
@@ -22,7 +22,7 @@ div#table{
 div#row{
   display: table-row;
 }
-#drinks {    
+section#drinks {    
   display: table-cell;    
   background-color: #efe5d0;    
   width: 20%;   
@@ -30,7 +30,7 @@ div#row{
   vertical-align: top; 
 }
 
-#main {
+section#main {
   display: table-cell;
   background:       #efe5d0 url(images/background.gif) top left;
   font-size:        105%;
@@ -38,7 +38,7 @@ div#row{
     vertical-align: top;
 }
 
-#sidebar {
+aside {
   display: table-cell;
   background:       #efe5d0 url(images/background.gif) bottom right;
   font-size:        105%;
@@ -48,7 +48,7 @@ div#row{
 }
 
 
-#footer {
+footer{
   background-color: #675c47;
   color:            #efe5d0;
   text-align:       center;
