--- a/starbuzz.css
+++ b/starbuzz.css
@@ -14,9 +14,12 @@ header.top {
 #headerSlogan{
   float: right;
 }
-ul{
+nav{
   background-color: #efe5d0;
   margin: 10px 10px 0px 10px;
+}
+ul{
+  margin: 0px;
   list-style-type: none;
   padding: 5px 0px;
 }
