--- a/starbuzz.css
+++ b/starbuzz.css
@@ -1,105 +1,145 @@
-body { 
-  background-color: #b5a789;
-  font-family:      Georgia, "Times New Roman", Times, serif;
-  font-size:        small;
-  margin:           0px;
+body {
+	background-color: #b5a789;
+	font-family: Georgia, "Times New Roman", Times, serif;
+	font-size: small;
+	margin: 0px;
+}
+
+div#video-container {
+	padding: 5px;
+}
+video {
+	width: 100%;
+	height: 100%;
 }
 
 header.top {
-   background-color: #675c47;
-  margin:           10px;
-  margin-bottom: 0px;
-  height:           108px;
+	background-color: #675c47;
+	margin: 10px;
+	margin-bottom: 0px;
+	height: 108px;
 }
-#headerSlogan{
-  float: right;
+#headerSlogan {
+	float: right;
 }
-nav{
-  background-color: #efe5d0;
-  margin: 10px 10px 0px 10px;
+nav {
+	background-color: #efe5d0;
+	margin: 10px 10px 0px 10px;
 }
-ul{
-  margin: 0px;
-  list-style-type: none;
-  padding: 5px 0px;
+ul {
+	margin: 0px;
+	list-style-type: none;
+	padding: 5px 0px;
 }
-li{
-  display: inline;
-  padding: 5px 10px;
-  margin: 0px;
-}
-
-ul li a:link, ul li a:visited{
-  color: #954b4b;
-  border-bottom: none;
-  font-weight: bold;
+li {
+	display: inline;
+	padding: 5px 10px;
+	margin: 0px;
 }
 
-ul li.selected{
-  background-color: #c8b99c;
-}
-div#table{
-  display: table;
-  border-spacing: 10px;
-}
-div#row{
-  display: table-row;
-}
-section#drinks {    
-  display: table-cell;    
-  background-color: #efe5d0;    
-  width: 20%;   
-  padding: 15px;    
-  vertical-align: top; 
+ul li a:link,
+ul li a:visited {
+	color: #954b4b;
+	border-bottom: none;
+	font-weight: bold;
 }
 
-section#blog, section#main {
-  display: table-cell;
-  background:       #efe5d0 url(images/background.gif) top left;
-  font-size:        105%;
-  padding:          15px;
-    vertical-align: top;
+ul li.selected {
+	background-color: #c8b99c;
+}
+div#flex-container {
+	flex-wrap: wrap;
+	/* outline: 1px solid black; */
+	margin: 10px;
+	display: flex;
+	justify-content: space-between;
+}
+div#flex-container > * {
+	flex: 1 1;
+	padding: 5px;
+	box-sizing: border-box;
+	/* outline: 1px solid black; */
+}
+section#drinks {
+	max-width: 28%;
+	background-color: #efe5d0;
+}
+
+section#blog {
+	max-width: 43%;
+	background: #efe5d0 url(images/background.gif) top left;
+	font-size: 105%;
+}
+section#main {
+	max-width: 43%;
+	background: #efe5d0 url(images/background.gif) top left;
+	font-size: 105%;
 }
 
 aside {
-  display: table-cell;
-  background:       #efe5d0 url(images/background.gif) bottom right;
-  font-size:        105%;
-  padding:          15px;
-  vertical-align: top;
-  width: 30%;
+	max-width: 28%;
+	background: #efe5d0 url(images/background.gif) bottom right;
+	font-size: 105%;
 }
 
-
-footer{
-  background-color: #675c47;
-  color:            #efe5d0;
-  text-align:       center;
-  padding:          15px;
-  margin:           10px;
-  margin-top: 0px;
-  font-size:        90%;
+footer {
+	background-color: #675c47;
+	color: #efe5d0;
+	text-align: center;
+	padding: 15px;
+	margin: 10px;
+	margin-top: 0px;
+	font-size: 90%;
 }
 
 h1 {
-  font-size:        120%;
-  color:            #954b4b;
+	font-size: 120%;
+	color: #954b4b;
 }
 
-.slogan { color: #954b4b; }
+.slogan {
+	color: #954b4b;
+}
 
 .beanheading {
-  text-align:       center;
-  line-height:      1.8em;
+	text-align: center;
+	line-height: 1.8em;
 }
 
 a:link {
-  color:            #b76666;
-  text-decoration:  none;
-  border-bottom:    thin dotted #b76666;
+	color: #b76666;
+	text-decoration: none;
+	border-bottom: thin dotted #b76666;
 }
 a:visited {
-  color:            #675c47;
-  text-decoration:  none;
-  border-bottom:    thin dotted #675c47;
+	color: #675c47;
+	text-decoration: none;
+	border-bottom: thin dotted #675c47;
+}
+
+@media screen and (max-width: 768px) {
+	div#flex-container {
+    display: flex;
+    flex-direction: column;
+
+		/* outline: 1px solid black; */
+		margin: 10px;
+	}
+	div#flex-container > * {
+    max-width: none;
+    margin: 10px 0px;
+    padding: 10px;
+    
+		/* outline: 1px solid black; */
+}
+section#drinks {
+	text-align: center;
+  order: 2;
+}
+section#main {
+	order: 1;
+}
+
+aside {
+	order: 3;
 }
